Try to avoid UI resizing on iPhone

--- a/src/main/resources/static/css/badgerstyle.css
+++ b/src/main/resources/static/css/badgerstyle.css
@@ -10,7 +10,7 @@
   font-style: normal;
   font-display: block;
 }
-body {
+html, body {
     overflow: hidden;
 }
 .badger-container {
